--- a/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
@@ -376,8 +376,11 @@
     "if MAKE_CIGALE_CATALOGUE:\n",
     "    \n",
     "    # Sorting the columns\n",
-    "    bands = [col[2:] for col in merged_table.colnames\n",
+    "    bands_tot = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "    bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
@@ -541,7 +544,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Check that we did not forget any column\n",
     "    assert set(columns) == set(merged_table.colnames)"
@@ -562,9 +565,9 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/GAMA-15.fits\")"
+    "    merged_table[columns].write(\"data/GAMA-15_{}.fits\".format(SUFFIX), overwwrite=True)"
    ]
   }
  ],
