--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# XMM-LSS - Merging HELP data products\n",
     "\n",
@@ -18,9 +15,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -42,9 +37,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -59,9 +52,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -72,10 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Reading the masterlist, XID+, and photo-z catalogues"
    ]
@@ -84,9 +72,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -101,9 +87,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -128,9 +112,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -172,9 +154,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -224,9 +204,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -245,9 +223,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -260,10 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Merging"
    ]
@@ -272,9 +245,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -294,9 +265,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -315,9 +284,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -336,9 +303,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -357,9 +322,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -372,10 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Saving the catalogue for CIGALE (first run)"
    ]
@@ -383,11 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1735,10 +1691,33 @@
     "        \n",
     "        #photo-z merging\n",
     "        merged_table = help_merge(ml, photoz)\n",
+    "        \n",
+    "        #flag merging\n",
+    "        flags = Table.read(\"../../dmu6/dmu6_v_XMM-LSS/data/tiles/xmm-lss_20180504_{}_flags.fits\".format(file_num))\n",
+    "        for col in flags.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                try:\n",
+    "                    merged_table.remove_column(col)\n",
+    "                except KeyError:\n",
+    "                    print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "        merged_table = join(merged_table, flags, join_type='left')\n",
+    "        # Fill values\n",
+    "        for col in merged_table.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                merged_table[col].fill_value = False\n",
+    "        merged_table = merged_table.filled()\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "    \n",
     "        # Sorting the columns\n",
-    "        bands = [col[2:] for col in merged_table.colnames\n",
-    "                 if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "        bands_tot = [col[2:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "        bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "        bands = list(set(bands_tot) | set(bands_ap))\n",
     "        bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
     "        columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
@@ -1757,17 +1736,15 @@
     "\n",
     "        # Check that we did not forget any column\n",
     "        print( set(columns) - set(merged_table.colnames))\n",
+    "        print(  set(merged_table.colnames) - set(columns) )\n",
     "    \n",
     "    \n",
-    "        merged_table.write(\"data/tiles/xmm-lss_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "        merged_table[columns].write(\"data/tiles/xmm-lss_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Merging CIGALE outputs\n",
     "\n",
@@ -1778,9 +1755,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1830,9 +1805,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1851,10 +1824,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Sorting columns\n",
     "\n",
@@ -1865,9 +1835,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1882,9 +1850,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1911,9 +1877,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1925,10 +1889,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Saving"
    ]
@@ -1937,9 +1898,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
