--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -389,8 +389,11 @@
     "if FIRST_RUN_FOR_CIGALE:\n",
     "    \n",
     "    # Sorting the columns\n",
-    "    bands = [col[2:] for col in merged_table.colnames\n",
+    "    bands_tot = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "    bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', #'redshift', \n",
@@ -408,7 +411,8 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    # assert set(columns) == set(merged_table.colnames)\n",
+    "    print(set(columns) - set(merged_table.colnames))\n",
+    "    print( set(merged_table.colnames) - set(columns) )\n",
     "    \n",
     "    \n",
     "    merged_table[columns].write(\"data/AKARI-NEP_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
