--- a/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
+++ b/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
@@ -368,8 +368,11 @@
     "if FIRST_RUN_FOR_CIGALE:\n",
     "    \n",
     "    # Sorting the columns\n",
-    "    bands = [col[2:] for col in merged_table.colnames\n",
+    "    bands_tot = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "    bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', #'redshift', \n",
