--- a/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
@@ -361,10 +361,34 @@
     "        merged_table['redshift'].fill_value = np.nan\n",
     "        merged_table = merged_table.filled()\n",
     "        ##################PHOTO-Z#################\n",
+    "        \n",
+    "        \n",
+    "        #flag merging\n",
+    "        flags = Table.read(\"../../dmu6/dmu6_v_Herschel-Stripe-82/data/tiles/\"\n",
+    "                           \"herschel-stripe-82_20180307_{}_flags.fits\".format(file_num))\n",
+    "        for col in flags.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                try:\n",
+    "                    merged_table.remove_column(col)\n",
+    "                except KeyError:\n",
+    "                    print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "        merged_table = join(merged_table, flags, join_type='left')\n",
+    "        # Fill values\n",
+    "        for col in merged_table.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                merged_table[col].fill_value = False\n",
+    "        merged_table = merged_table.filled()\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "    \n",
     "        # Sorting the columns\n",
-    "        bands = [col[2:] for col in merged_table.colnames\n",
-    "                 if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "        bands_tot = [col[2:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "        bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "        bands = list(set(bands_tot) | set(bands_ap))\n",
     "        bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
     "        columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
@@ -382,10 +406,11 @@
     "    \n",
     "\n",
     "        # Check that we did not forget any column\n",
-    "        # assert set(columns) == set(merged_table.colnames)\n",
+    "        print( set(columns) - set(merged_table.colnames))\n",
+    "        print(  set(merged_table.colnames) - set(columns) )\n",
     "    \n",
     "    \n",
-    "        merged_table.write(\"data/tiles/Herschel-Stripe-82_cigale_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "        merged_table[columns].write(\"data/tiles/Herschel-Stripe-82_cigale_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   },
   {
