--- a/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
@@ -222,9 +222,7 @@
    "source": [
     "# Temp spec-z\n",
     "\n",
-    "ml['zspec'].name = 'redshift'\n",
-    "\n",
-    "ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -236,7 +234,7 @@
    "outputs": [],
    "source": [
     "# Flags\n",
-    "flags = Table.read(\"../../dmu6/dmu6_v_GAMA-12/data/gama-12_20180218_flags.fits\")"
+    "flags = Table.read(\"../../dmu6/dmu6_v_xFLS/data/xfls_20180501_flags.fits\")"
    ]
   },
   {
@@ -370,8 +368,11 @@
     "if FIRST_RUN_FOR_CIGALE:\n",
     "    \n",
     "    # Sorting the columns\n",
-    "    bands = [col[2:] for col in merged_table.colnames\n",
+    "    bands_tot = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "    bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv',# 'redshift', \n",
