--- a/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
+++ b/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
@@ -223,9 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -783,34 +781,36 @@
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
+    "        #print(band1, band2)\n",
     "\n",
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
     "        \n",
     "        # Aperture mag\n",
-    "        try:\n",
-    "            col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
-    "            ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
-    "            flagcol1, flagcol2 = \"flag_{}_ap\".format(basecol1), \"flag_{}_ap\".format(basecol2)\n",
+    "        col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
+    "        ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
+    "        flagcol1, flagcol2 = \"flag_ap_{}\".format(basecol1), \"flag_ap_{}\".format(basecol2)\n",
     "        \n",
-    "            flag_outliers(master_catalogue[col1], master_catalogue[col2],\n",
-    "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                          flagcol1, flagcol2,\n",
-    "                          labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
-    "        except KeyError:\n",
-    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
-    "                      \n",
     "        try:\n",
-    "            # Tot mag\n",
-    "            col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
-    "            ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
-    "            flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
-    "                      \n",
-    "            flag_outliers(master_catalogue[col1], master_catalogue[col2], \n",
-    "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                          flagcol1, flagcol2,\n",
-    "                          labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))\n",
+    "            master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
+    "                      ecol1, ecol2,\n",
+    "                      flagcol1, flagcol2,\n",
+    "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
     "        except KeyError:\n",
-    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))"
+    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
+    "                      \n",
+    "        \n",
+    "        # Tot mag\n",
+    "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
+    "        ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
+    "        flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
+    "              \n",
+    "        try:\n",
+    "            master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
+    "                      ecol1, ecol2,\n",
+    "                      flagcol1, flagcol2,\n",
+    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))   \n",
+    "        except KeyError:\n",
+    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))"
    ]
   },
   {
