Bootes final merge notebook work

--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "# Masterlist DR1 date\n",
-    "SUFFIX = '20180227'"
+    "SUFFIX = '20180520'"
    ]
   },
   {
@@ -257,10 +257,7 @@
    ],
    "source": [
     "# Temp spec-z\n",
-    "\n",
-    "ml['zspec'].name = 'redshift'\n",
-    "\n",
-    "ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
