--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -99,16 +99,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam? [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XID+ PACS\n",
     "\n",
@@ -150,16 +141,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam? [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XID+ SPIRE\n",
     "\n",
@@ -231,8 +213,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:3: RuntimeWarning: invalid value encountered in less\n",
-      "  app.launch_new_instance()\n"
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
@@ -244,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -282,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -301,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -320,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -334,11 +316,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column: flag_gpc1_g not in masterlist.\n",
+      "Column: flag_gpc1_r not in masterlist.\n",
+      "Column: flag_gpc1_i not in masterlist.\n",
+      "Column: flag_gpc1_z not in masterlist.\n",
+      "Column: flag_gpc1_y not in masterlist.\n",
+      "Column: flag_irac_i1_ap not in masterlist.\n",
+      "Column: flag_irac_i2_ap not in masterlist.\n",
+      "Column: flag_irac_i3_ap not in masterlist.\n",
+      "Column: flag_irac_i4_ap not in masterlist.\n"
+     ]
+    }
+   ],
    "source": [
     "for col in flags.colnames:\n",
     "    if 'flag' in col:\n",
@@ -364,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -463,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -493,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -508,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -535,11 +533,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
@@ -556,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -564,7 +570,7 @@
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\", overwrite=True)"
+    "    merged_table[columns].write(\"data/CDFS-SWIRE_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
