--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -537,7 +537,8 @@
    "outputs": [],
    "source": [
     "# Check that we did not forget any column\n",
-    "assert set(columns) == set(merged_table.colnames)"
+    "print( set(columns) - set(merged_table.colnames))\n",
+    "print(set(merged_table.colnames) - set(columns))"
    ]
   },
   {
