--- a/dmu6/dmu6_v_ELAIS-N1/4_flags_elais-n1.ipynb
+++ b/dmu6/dmu6_v_ELAIS-N1/4_flags_elais-n1.ipynb
@@ -191,7 +191,7 @@
     "    basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
     "    ecol_ap = \"merr_ap_{}\".format(basecol)\n",
-    "    flagcol_ap = \"flag_{}_ap\".format(basecol)\n",
+    "    flagcol_ap = \"flag_ap_{}\".format(basecol)\n",
     "    \n",
     "    mask_ap  = np.where(master_catalogue[ecol_ap]  == irac_mag)[0]\n",
     "    \n",
