All flags rerun on all fields

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -210,15 +210,15 @@
      "output_type": "stream",
      "text": [
       "Probably no aperture mag on m_ap_megacam_g or m_ap_gpc1_g\n",
-      "Probably no aperture mag on m_megacam_g or m_gpc1_g\n",
+      "Probably no total mag on m_megacam_g or m_gpc1_g\n",
       "Probably no aperture mag on m_ap_megacam_r or m_ap_gpc1_r\n",
-      "Probably no aperture mag on m_megacam_r or m_gpc1_r\n",
+      "Probably no total mag on m_megacam_r or m_gpc1_r\n",
       "Probably no aperture mag on m_ap_megacam_i or m_ap_gpc1_i\n",
-      "Probably no aperture mag on m_megacam_i or m_gpc1_i\n",
+      "Probably no total mag on m_megacam_i or m_gpc1_i\n",
       "Probably no aperture mag on m_ap_megacam_z or m_ap_gpc1_z\n",
-      "Probably no aperture mag on m_megacam_z or m_gpc1_z\n",
+      "Probably no total mag on m_megacam_z or m_gpc1_z\n",
       "Probably no aperture mag on m_ap_gpc1_y or m_ap_wircam_y\n",
-      "Probably no aperture mag on m_gpc1_y or m_wircam_y\n"
+      "Probably no total mag on m_gpc1_y or m_wircam_y\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
