--- a/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
+++ b/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
@@ -184,7 +184,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WIRCS K\n"
+      "WIRCS K\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 26\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 58\n"
      ]
     },
     {
@@ -193,16 +197,6 @@
      "text": [
       "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  return getattr(self.data, op)(other)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Aperture magnitude\n",
-      "    Number of flagged objects: 26\n",
-      "  Total magnitude\n",
-      "    Number of flagged objects: 58\n"
      ]
     }
    ],
@@ -474,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -495,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
