--- a/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
+++ b/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
@@ -318,11 +318,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flag_ap_irac_i1 only has aperture flags.\n",
+      "flag_ap_irac_i2 only has aperture flags.\n",
+      "flag_ap_irac_i3 only has aperture flags.\n",
+      "flag_ap_irac_i4 only has aperture flags.\n"
+     ]
+    }
+   ],
    "source": [
     "#Merge any aperture flags\n",
     "for col in master_catalogue.colnames:\n",
@@ -338,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
