--- a/dmu6/dmu6_v_ELAIS-N2/4_flags_elais-n2.ipynb
+++ b/dmu6/dmu6_v_ELAIS-N2/4_flags_elais-n2.ipynb
@@ -315,11 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flag_ap_irac_i1 only has aperture flags.\n",
+      "flag_ap_irac_i2 only has aperture flags.\n",
+      "flag_ap_irac_i3 only has aperture flags.\n",
+      "flag_ap_irac_i4 only has aperture flags.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#Merge any aperture flags#Merge  \n",
@@ -336,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
