SSDF final merge columns orders

--- a/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "# Flags\n",
-    "flags = Table.read(\"../../dmu6/dmu6_v_SSDF/data/ssdf_20180221_flags.fits\")"
+    "#flags = Table.read(\"../../dmu6/dmu6_v_SSDF/data/ssdf_20180221_flags.fits\")"
    ]
   },
   {
@@ -334,19 +334,19 @@
    },
    "outputs": [],
    "source": [
-    "for col in flags.colnames:\n",
-    "    if 'flag' in col:\n",
-    "        try:\n",
-    "            merged_table.remove_column(col)\n",
-    "        except KeyError:\n",
-    "            print(\"Column: {} not in masterlist.\".format(col))\n",
-    "        \n",
-    "merged_table = join(merged_table, flags, join_type='left')\n",
-    "# Fill values\n",
-    "for col in merged_table.colnames:\n",
-    "    if 'flag' in col:\n",
-    "        merged_table[col].fill_value = False\n",
-    "merged_table = merged_table.filled()"
+    "#for col in flags.colnames:\n",
+    "#    if 'flag' in col:\n",
+    "#        try:\n",
+    "#            merged_table.remove_column(col)\n",
+    "#        except KeyError:\n",
+    "#            print(\"Column: {} not in masterlist.\".format(col))\n",
+    "#        \n",
+    "#merged_table = join(merged_table, flags, join_type='left')\n",
+    "## Fill values\n",
+    "#for col in merged_table.colnames:\n",
+    "#    if 'flag' in col:\n",
+    "#        merged_table[col].fill_value = False\n",
+    "#merged_table = merged_table.filled()"
    ]
   },
   {
@@ -374,7 +374,7 @@
     "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', #'redshift', \n",
     "               'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
@@ -389,10 +389,11 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    # assert set(columns) == set(merged_table.colnames)\n",
+    "    print( set(columns) - set(merged_table.colnames))\n",
+    "    print( set(merged_table.colnames) - set(columns) )\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/SSDF_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/SSDF_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
